--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fabián Madariaga C. | Front Developer & Digital Designer</title>
     <meta name="description" content="Fabian Madariaga, Diseño Gráfico y Desarrollo web. Front Developer and Graphics Designer">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/style.min.css" rel="stylesheet">
     <link href="assets/css/reset.css" rel="stylesheet">
     <link href="assets/images/favicon.svg" rel="icon" type="image/svg+xml" sizes="any">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
