Add Senior Front

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="color-scheme" content="dark light">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fabián Madariaga C. | Front Developer & Digital Designer</title>
+    <title>Fabián Madariaga | Senior Front Developer & Digital Designer</title>
     <meta name="description" content="Fabian Madariaga, Diseño Gráfico y Desarrollo web. Front Developer and Graphics Designer">
     <link href="assets/css/style.min.css" rel="stylesheet">
     <link href="assets/css/reset.css" rel="stylesheet">
@@ -320,7 +320,7 @@
                             About me
                         </h2>
                         <p class="pt-5 pb-2">
-                            I am 34 years old from Chile. Graduated from Graphic Designer, but I found skills for Front Development, which I am passionate about. I have a little over 8 years of experience designing and developing websites independently.
+                            I am 37 years old from Chile. Graduated from Graphic Designer, but I found skills for Front Development, which I am passionate about. I have a little over 8 years of experience designing and developing websites independently.
                         </p>
                         <p>
                             I have also worked internally in design agencies and related companies.
