--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                         <div class="col-12 col-lg-6 my-5 my-lg-0" data-aos="fade-right" data-aos-delay="600">
                             <div class="experience__info d-flex flex-column flex-lg-row align-items-center position-relative">
                                 <div class="experience-info__number position-relative">
-                                    2
+                                    4
                                     <p class="experience-info-number__years year fw-bold position-absolute">
                                         Years
                                     </p>
@@ -692,7 +692,7 @@
                 <div class="col-12 col-lg-6">
                     <div class="contact__img pt-5" data-aos="zoom-in" data-aos-delay="450" data-aos-duration="1000">
                         <figure class="position-relative mb-0">
-                            <span class="d-block text-center">Santiago de Chile</span>
+                            <span class="d-block text-center">Algarrobo, Chile.</span>
                             <img class="w-10" src="assets/images/contact/map-pin.svg" alt="I'm in Santiago de Chile">
                             <img class="d-block w-75 mx-auto" src="assets/images/contact/my-home.svg" alt="I'm in Santiago de Chile">
                         </figure>
@@ -706,7 +706,9 @@
             <div class="row py-5">
                 <div class="col-12">
                     <p class="footer__name mx-auto position-relative pb-1 mb-1">
-                        Fabián Madariaga C.
+                        <code><h1></code>
+                            Fabián Madariaga.
+                        <code></h1></code>
                     </p>
                     <p class="footer__since text-center position-relative">
                         Since 1988
